tests/NormalTests/paczka1/fuzzy1/75481803.err
Error in line 1: is0egkuY A478 11,4
Error in line 2: is0egkuY A108 25,6
Error in line 3: is0egkuY A277 27,9
Error in line 7: C9Zd A277 62,5
Error in line 31: A478 A108 01,0
Error in line 28: GHD A478 215,8
